# staccana

./: .gitignore  AGENTS.md  Cargo.toml  README.md  _n.mjs
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: anchor-build.yml  ci.yml
agent-messaging/: Cargo.toml
agent-messaging/src/: alphabet.rs  cipher.rs  lib.rs  megatxn.rs  packet.rs
docker/: Dockerfile  Dockerfile.multiarch  build-and-push.sh  staccana-run.sh
docs/: AGENTIC_MEDIATION.md  AGENT_MESSAGING.md  ARCHITECTURE.md  AUDIT_SCOPE.md  BRIDGE.md  E2E_DEPLOY.md  EXPLORER.md  INFRA.md  LAUNCH.md  LINEAGE.md  MEGADROP.md  ROADMAP.md  SECRET_RAY.md  SPEC.md  WALLET_INTEGRATION.md  ZCASH_AGENT_MESSAGING.md
e2e-tests/: Cargo.toml
e2e-tests/src/: harness.rs  lib.rs  synthetic.rs
e2e-tests/tests/: e2e_bridge.rs  e2e_claim.rs  e2e_genesis_to_claim.rs  e2e_matcher.rs
frontend/: .env.local.example  .gitignore  .npmrc  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: MarketChart.tsx  SecretBalancePanel.tsx  cluster-banner.tsx  empty-state.tsx  mobile-balance-sheet.tsx  network-status-banner.tsx  page-header.tsx  site-footer.tsx  site-header.tsx  theme-provider.tsx  token-selector.tsx  wallet-button.tsx  wallet-help.tsx
frontend/lib/: anchor.ts  bridge-pending.ts  bridge.ts  bridged-tokens.ts  claim.ts  confidential-transit.ts  confidential.test.ts  confidential.ts  db.ts  elgamal-client.ts  helius.ts  lut.ts  mediation.ts  megadrop.ts  merkle.ts  pump-extra.ts  pump-mint.ts  pump.ts  snapshot.ts  staccana.ts  subsidy.ts  utils.ts  wallet.tsx
frontend/tests/: megadrop.test.ts  merkle.test.ts  pump-curve.test.ts  subsidy.test.ts
genesis/: Cargo.toml
genesis/src/: builder.rs  classic_defaults.rs  lib.rs  merkle.rs  partition.rs  treasury.rs
genesis/tests/: classic_defaults_invariants.rs  merkle_proof_construction.rs  partition_distribution.rs  treasury_aggregation.rs
infra/: README.md  token-list.json
infra/ansible/: inventory.yml.example  site.yml
infra/cloudflare/: nginx-rpc-snippet.conf  rpc-compat-worker.js  setup-rpc-loadbalancer.sh  wrangler.toml
infra/scripts/: 00-bootstrap-box.sh  10-pull-snapshot.sh  20-build-genesis.sh  25-build-programs.sh  30-init-validator.sh  35-deploy-validator-2.sh  35-deploy-validator-N.sh  36-stage-validator-N.sh  37-sync-start-all.sh  40-deploy-programs.sh  45-deploy-bridge-vault-devnet.sh  50-init-state.sh  build-agave.sh  staccana-bridge-publisher.sh
infra/systemd/: staccana-attestor.service  (+5 more)
integration-tests/: Cargo.toml
integration-tests/src/: fixtures.rs  lib.rs  mocks.rs
integration-tests/tests/: claim_flow.rs  matcher_scenarios.rs  merkle_consistency.rs  property_invariants.rs  spec_conformance.rs
matcher/: Cargo.toml
matcher/src/: amm.rs  batch.rs  intent.rs  lib.rs  quote_registry.rs
matcher/tests/: amm_anchored_clearing.rs  determinism.rs  multi_pair_isolation.rs  size_priority.rs
programs/agent-faucet/: Cargo.toml
programs/agent-faucet/src/: error.rs  lib.rs  state.rs
programs/bridge-vault/: Cargo.toml
programs/bridge-vault/src/: attestation.rs  ed25519.rs  error.rs  lib.rs  state.rs
programs/bridge-vault/src/instructions/: deposit.rs  init_vault.rs  mod.rs  release_with_attestation.rs
programs/lazy-claim/: Cargo.toml
programs/lazy-claim/src/: error.rs  instruction.rs  lib.rs  merkle.rs  processor.rs  state.rs
programs/megadrop/: Cargo.toml
programs/megadrop/src/: calendar.rs  ed25519.rs  error.rs  lib.rs  megadrop.rs  merkle.rs  state.rs
programs/megadrop/src/instructions/: claim_megadrop.rs  init_megadrop.rs  mod.rs  proof_buffer.rs  update_megadrop.rs
programs/secret-pump/: Cargo.toml
programs/secret-pump/src/: curve.rs  error.rs  lib.rs  state.rs
programs/secret-pump/src/instructions/: buy.rs  create.rs  mod.rs  sell.rs
programs/validator-subsidy/: Cargo.toml
programs/validator-subsidy/src/: ed25519.rs  error.rs  lib.rs  state.rs  subsidy.rs
programs/validator-subsidy/src/instructions/: admin_set_metrics.rs  bootstrap_distribute.rs  delegate_treasury_stake.rs  distribute_yield.rs  init_subsidy.rs  migrate_treasury_owner.rs  mod.rs  register_validator.rs  set_bootstrap_per_epoch.rs  stake_to_productive.rs  unregister_validator.rs  unstake_from_productive.rs  update_validator_metrics.rs
scripts/: lwd-info  run-lightwalletd-local  staccana-cargo-build-bpf
tools/: megadrop-snapshot-quick.py
tools/agent-mail/: Cargo.toml
tools/agent-mail/src/: lib.rs  main.rs
tools/agent-mail/tests/: agent_mail_e2e.rs
tools/bridge-cli/: Cargo.toml
tools/bridge-cli/src/: asset.rs  deposit.rs  lib.rs  main.rs  ratio.rs  withdraw.rs
tools/bridge-init/: Cargo.toml
tools/bridge-init/src/: lib.rs  main.rs
tools/bridge-vault-init/: Cargo.toml
tools/bridge-vault-init/src/: lib.rs  main.rs
tools/claim-cli/: Cargo.toml
tools/claim-cli/src/: lib.rs  main.rs  proof.rs  submit.rs  tx.rs
tools/federation-attestor/: Cargo.toml
tools/federation-attestor/src/: bridge_msg.rs  bridge_observer.rs  config.rs  daemon.rs  lib.rs  main.rs  observer.rs  publish.rs  sign.rs  state_store.rs
tools/genesis-bake/: Cargo.toml
tools/genesis-bake/src/: accounts.rs  config.rs  emit.rs  features.rs  lib.rs  main.rs  mints.rs  pdas.rs  programs.rs
tools/genesis-emit/: Cargo.toml
tools/genesis-emit/src/: compose.rs  composed.rs  emit.rs  lib.rs  main.rs
tools/megadrop-init/: Cargo.toml
tools/megadrop-init/src/: main.rs
tools/megadrop-merkle/: Cargo.toml
tools/megadrop-merkle/src/: allocate.rs  input.rs  lib.rs  main.rs  output.rs  tree.rs
tools/megadrop-snapshot/: Cargo.toml
tools/megadrop-snapshot/src/: allocate.rs  cli.rs  das.rs  lib.rs  main.rs  output.rs  snapshot.rs
tools/snapshot-fork/: Cargo.toml
tools/snapshot-fork/src/: cli.rs  lib.rs  main.rs  mock.rs  output.rs  shards.rs  solana.rs  source.rs
tools/subsidy-cli/: Cargo.toml
tools/subsidy-cli/src/: main.rs
tools/wssol-init/: Cargo.toml
tools/wssol-init/src/: main.rs
(+72 files in other folders)
