[workspace]
resolver = "2"
members = [
    "agent-messaging",
    "matcher",
    "genesis",
    "programs/agent-faucet",
    "programs/lazy-claim",
    "programs/secret-pump",
    "programs/megadrop",
    "tools/snapshot-fork",
    "tools/genesis-emit",
    "tools/genesis-bake",
    "tools/claim-cli",
    "tools/megadrop-init",
    "tools/agent-mail",
    "tools/megadrop-merkle",
    "tools/megadrop-snapshot",
    "integration-tests",
    "e2e-tests",
]
exclude = ["proofs-pkg"]
# Planned crates (uncomment as they land):
#   "programs/secret-ray",          # forked Raydium AMM v4 / CLMM / CPMM + router
#   "programs/secret-stake",
#   "programs/secret-payroll",

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["stacc"]

[workspace.dependencies]
solana-program = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

# cargo-build-sbf bundled with solana 2.0.25 ships with Rust 1.75 (April 2024),
# but blake3 >= 1.6 and a few other transitive crates require edition2024 which
# isn't stable until Rust 1.85. Pin via Cargo.lock with:
#   cargo update -p blake3 --precise 1.5.5
# (cargo doesn't permit a [patch.crates-io] entry that resolves to the same
# crates-io source — it requires a different source like git or path. The
# Cargo.lock pin is enough since the SBF build reads --frozen-style.)

# Dep-graph note:
# `programs/secret-pump` and `programs/megadrop` are on `anchor-lang = "1"` /
# `anchor-spl = "1"`, which use `solana-program 2.x` natively (via the split
# `spl-token-2022-interface` crate). Workspace-wide `cargo check` resolves a single
# coherent solana-program / spl-token-2022 lockfile entry and builds every crate in
# one invocation.
#
# Bridge removed: the federated multi-asset bridge (programs/bridge, bridge-vault) and
# validator-subsidy (its yield engine) were deleted — no bridge, no yield. User on/off-ramp
# is CEX listings; validators are paid by treasury principal drawdown. See docs/AUDIT_SCOPE.md.
