[package]
name = "staccana-agent-messaging"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Agent private-message amount codec for Staccana Token-22 confidential transfers."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1"
