[package]
name = "staccana-e2e-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "End-to-end chain-simulation tests for Staccana. Drives the lazy-claim program through a real BanksClient via solana-program-test, plus end-to-end pipeline tests that walk synthetic snapshots through build_genesis → compose → on-chain claim, and pure-Rust matcher walkthroughs."

[lib]
name = "staccana_e2e_tests"
path = "src/lib.rs"

[dependencies]
staccana-genesis = { path = "../genesis" }
staccana-matcher = { path = "../matcher" }
staccana-lazy-claim = { path = "../programs/lazy-claim", default-features = false }
staccana-claim-cli = { path = "../tools/claim-cli" }
staccana-snapshot-fork = { path = "../tools/snapshot-fork" }
staccana-genesis-emit = { path = "../tools/genesis-emit" }
solana-program-test = "2"
solana-sdk = "2"
solana-program = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"
bs58 = "0.5"

[dev-dependencies]
tempfile = "3"
