[package]
name = "staccana-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Cross-crate integration tests, end-to-end flows, property-based invariant tests, and SPEC.md byte-format conformance checks for Staccana."

[lib]
name = "staccana_integration_tests"
path = "src/lib.rs"

[dependencies]
staccana-matcher = { path = "../matcher" }
staccana-genesis = { path = "../genesis" }
staccana-lazy-claim = { path = "../programs/lazy-claim" }
staccana-claim-cli = { path = "../tools/claim-cli" }
staccana-snapshot-fork = { path = "../tools/snapshot-fork" }
staccana-genesis-emit = { path = "../tools/genesis-emit" }
solana-program = { workspace = true }
solana-sdk = "2"
serde = { workspace = true }
anyhow = { workspace = true }
serde_json = "1"
proptest = "1"
# NOTE: staccana-secret-pump is NOT a direct dep here. Anchor 0.30's transitive spl-pod
# brings in a different solana-program version that conflicts with the workspace's
# solana-program v2. Pump cross-crate tests live in that crate's own tests/ directory
# (programs/secret-pump/tests/) where the dep tree is internally consistent. SPEC byte
# conformance — pinned independently in each crate — is what enforces cross-crate consistency.
