[package]
name = "staccana-agent-faucet"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Agent-only MSG carrier-token faucet for Staccana agent messaging."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "1", features = ["init-if-needed"] }
anchor-spl = { version = "1", features = ["token_2022"] }

[features]
default = ["bpf-entrypoint"]
bpf-entrypoint = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
