[package]
name = "staccana-lazy-claim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Lazy-claim program for Staccana — verifies Merkle inclusion + ed25519 signature, materializes a claimable account from the genesis snapshot."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { workspace = true }
thiserror = { workspace = true }
borsh = "1"

[features]
# Enable the BPF entrypoint. Off in unit tests so `solana_program::entrypoint!` doesn't
# clash with the host test runner.
default = ["bpf-entrypoint"]
bpf-entrypoint = []
