[package]
name = "staccana-megadrop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Staccana megadrop program — Merkle + ed25519-gated treasury claim with 10-tranche monthly vesting for based_stacc_0 + proofv3 holders (see docs/MEGADROP.md)."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "1", features = ["init-if-needed"] }
# Anchor 1.0 no longer re-exports `solana_program::sysvar::instructions::{load_*, ID}`,
# `solana_program::ed25519_program::ID`, or `solana_program::hash::{hashv, Hash}`. Pull
# the specific interface crates directly.
solana-instructions-sysvar = "3"
solana-sdk-ids = "3"
solana-hash = "4"
solana-program = { workspace = true }
thiserror = { workspace = true }

[features]
# Enable the BPF entrypoint via Anchor's `#[program]` macro. Off in unit tests so the host
# test runner doesn't trip over `solana_program::entrypoint!`.
default = ["bpf-entrypoint"]
bpf-entrypoint = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
