[package]
name = "staccana-validator-subsidy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Staccana validator-subsidy program — distributes treasury productive-position yield (and a bootstrap reserve for the first 60 epochs) pro-rata to active validators per SPEC §7.2."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "1", features = ["init-if-needed"] }
anchor-spl = { version = "1", features = ["token_2022"] }
# Anchor 1.0 no longer re-exports `solana_program::sysvar::instructions::{load_*, ID}`
# or `solana_program::ed25519_program::ID`. Pull the specific interface crates directly.
solana-instructions-sysvar = "3"
solana-sdk-ids = "3"
staccana-bridge = { path = "../bridge", features = ["cpi"], default-features = false }
thiserror = { workspace = true }

[features]
# Enable the BPF entrypoint via Anchor's `#[program]` macro. Off in unit tests so the host
# test runner doesn't trip over `solana_program::entrypoint!`.
default = ["bpf-entrypoint"]
bpf-entrypoint = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "staccana-bridge/idl-build"]
