[package]
name = "staccana-bridge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "User-facing CLI for the Staccana bridge: deposit (mainnet → staccana), withdraw (staccana → mainnet), and read the per-asset ratio R."

[[bin]]
name = "staccana-bridge-cli"
path = "src/main.rs"

[lib]
name = "staccana_bridge_cli"
path = "src/lib.rs"

[dependencies]
solana-sdk = "4"
solana-client = "3"
solana-program = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"
borsh = "1"
