[package]
name = "staccana-megadrop-init"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "One-shot init for the Staccana megadrop's MegadropConfig PDA. Run after step 40 deploys the megadrop program."

[[bin]]
name = "staccana-megadrop-init"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
solana-client = "2"
solana-sdk = "2"
solana-program = { workspace = true }
sha2 = "0.10"
borsh = { version = "1", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `staccana-megadrop-merkle` exposes the same `build_tree` the page uses, so
# `--allocations-json <path>` produces a root that matches the on-chain
# verifier byte-for-byte (no hex-paste step).
staccana-megadrop-merkle = { path = "../megadrop-merkle" }
