[package]
name = "staccana-megadrop-snapshot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Off-chain CLI: walk based_stacc_0 + proofv3 holders on Solana mainnet, build the megadrop Merkle tree + per-holder proofs."

[[bin]]
name = "staccana-megadrop-snapshot"
path = "src/main.rs"

[lib]
name = "staccana_megadrop_snapshot"
path = "src/lib.rs"

[dependencies]
staccana-genesis = { path = "../../genesis" }
solana-program = { workspace = true }
solana-sdk = "2"
serde = { workspace = true }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
bs58 = "0.5"

[dev-dependencies]
tempfile = "3"
