[package]
name = "staccana-subsidy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "One-shot init + register-validator CLI for the staccana validator-subsidy program."

[[bin]]
name = "staccana-subsidy-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
solana-client = "3"
solana-sdk = "4"
solana-program = { workspace = true }
sha2 = "0.10"
borsh = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
