[package]
name = "staccana-wssol-init"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Create the wssol Token-22 mint with the Confidential Transfer Extension on staccana. Bypasses spl-token-cli's hardcoded canonical Token-22 address check."

[[bin]]
name = "staccana-wssol-init"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
solana-client = "3"
solana-sdk = "4"
spl-token-2022 = { version = "8", features = ["no-entrypoint"] }
hex = "0.4"
